--- a/projeto_parte1/css/main.css
+++ b/projeto_parte1/css/main.css
@@ -16,7 +16,7 @@ body {
 	margin: 0px;
 	width: 100%;
 	height: 100%;
-	min-width: 50%;
+	min-width: 800px;
 	top: 0px;
 	background-repeat: no-repeat;
 	background-color: rgba(1, 1, 1, 0.5);;
@@ -45,10 +45,10 @@ textarea {
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    background-color: black;
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 50%;
+    /*background-color: black;*/
 }
 
 .barfont {
@@ -84,7 +84,8 @@ textarea {
 .tfpattern {
 	/*width: 20%;*/
 	height: 25px;
-	border-radius: 5%;
+	-webkit-border-radius: 5%;
+	-moz-border-radius: 5%;
 }
 
 .tfpattern:hover {
@@ -130,7 +131,9 @@ textarea {
 	color: white;
 	text-shadow: 2px 1px 1px rgb(178, 178, 178);
 	-webkit-border-top-left-radius: 2px;
+	-moz-border-top-left-radius: 2px;
 	-webkit-border-bottom-right-radius: 2px;
+	-moz-border-bottom-right-radius: 2px;
     
 }
 
